styling updates and course dropdown

--- a/styles/login.css
+++ b/styles/login.css
@@ -15,3 +15,15 @@ form {
     transform: translate(-50%, -50%);
 }
 
+.vertical-center {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+  
+    display: flex;
+    align-items: center;
+  }
+
+body {
+    background-image: url(./images/background.jpeg);
+}
+
