--- a/styles/courses.css
+++ b/styles/courses.css
@@ -1,9 +1,15 @@
-form {
+.spec {
     background-color: rgba(155,155,155,0.5);
     padding: 30px;
     border-radius: 50px;
     justify-content: space-between;
     display: inline-flex;
+}
 
+.none {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
